--- a/tcp/sourcecode/2024-08-31-10000-tcpip-source.md
+++ b/tcp/sourcecode/2024-08-31-10000-tcpip-source.md
@@ -243,3 +243,7 @@ static initcall_entry_t *initcall_levels[] __initdata = {
 - [TCP/IP协议栈源代码分析](https://blog.csdn.net/fsn20010710/article/details/135303764)
 
 - [TCP/IP协议栈源代码分析](https://blog.csdn.net/qq_48227727/article/details/135306057)
+
+
+linux内核的整体架构如下所示：
+
