--- a/tcp/sourcecode/2024-08-31-10000-tcpip-source.md
+++ b/tcp/sourcecode/2024-08-31-10000-tcpip-source.md
@@ -247,3 +247,20 @@ static initcall_entry_t *initcall_levels[] __initdata = {
 
 linux内核的整体架构如下所示：
 
+![quic-layer](https://raw.githubusercontent.com/ivanzz1001/protocol_development_learning/master/tcp/sourcecode/image/tcpip-10000-01.jpg)
+
+根据内核的核心功能，Linux内核提出了5个子系统，分别负责如下的功能：
+
+
+- Process Scheduler: 也称为进程管理、进程调度。负责管理CPU资源，以便让各个进程可以以尽量公平的方式访问CPU。
+
+- Memory Manager: 内存管理，负责管理Memory（内存）资源，以便让各个进程可以安全地共享机器的内存资源。另外，内存管理会提供虚拟内存的机制，该机制可以让进程使用多于系统可用Memory的内存，不用的内存会通过文件系统保存在外部非易失存储器中，需要使用的时候，再取回到内存中。
+
+- VFS（Virtual File System）：虚拟文件系统。Linux内核将不同功能的外部设备，例如Disk设备（硬盘、磁盘、NAND Flash、Nor Flash等）、输入输出设备、显示设备等等，抽象为可以通过统一的文件操作接口（open、close、read、write等）来访问。
+
+- Network：网络子系统。负责管理系统的网络设备，并实现多种多样的网络标准。
+
+- IPC（Inter-Process Communication）：进程间通信。IPC不管理任何的硬件，它主要负责Linux系统中进程之间的通信。
+
+这里我们主要关注`网络子系统`。Linux基于TCP/IP协议的内核网络栈实现结构如下图所示：
+
