--- a/tcp/sourcecode/2024-08-31-10000-tcpip-source.md
+++ b/tcp/sourcecode/2024-08-31-10000-tcpip-source.md
@@ -264,3 +264,4 @@ linux内核的整体架构如下所示：
 
 这里我们主要关注`网络子系统`。Linux基于TCP/IP协议的内核网络栈实现结构如下图所示：
 
+![quic-layer](https://raw.githubusercontent.com/ivanzz1001/protocol_development_learning/master/tcp/sourcecode/image/tcpip-10000-02.png)
