--- a/tcp/sourcecode/0-相关文章收集.md
+++ b/tcp/sourcecode/0-相关文章收集.md
@@ -2,3 +2,19 @@
 
 
 - [深入理解TCP协议及其源代码--send和recv背后的数据收发过程](https://www.cnblogs.com/ypsupreme/p/12096887.html)
+
+
+- [面试必问的十八个TCP协议问题（汇总版）](https://zhuanlan.zhihu.com/p/622157624)
+
+- [剖析Linux内核《UDP&TCP协议栈》](https://www.bilibili.com/video/BV1mN4y1s77x/)
+
+- [解决TCP延迟应答(Delay ACK)问题的3个小Trick](https://blog.csdn.net/dog250/article/details/52346178)
+
+- [再次谈谈TCP的Nagle算法与TCP_CORK选项](https://blog.csdn.net/dog250/article/details/21303679)
+
+- [linux 系统 tcp 内核参数](https://www.cnblogs.com/zhouyisheng/p/16305933.html)
+
+
+- [我们来说一说TCP神奇的40ms](https://zhuanlan.zhihu.com/p/53169705?utm_id=0)
+
+- [TCP 拥塞控制](https://blog.csdn.net/a49681109/article/details/79701491)
